// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executive summary budget component DollarCell renders correctly 1`] = `
<td
  className="mono right-align"
  headers="one two three"
>
  <Dollars
    long={false}
  >
    32.57
  </Dollars>
</td>
`;

exports[`executive summary budget component DollarCell renders correctly 2`] = `
<td
  className="mono right-align"
  headers="one two three"
>
  <Dollars
    long={false}
  >
    75.23
  </Dollars>
</td>
`;

exports[`executive summary budget component renders correctly with data 1`] = `
<div>
  <div
    className="mb3 overflow-x"
  >
    <table
      className="table-cms"
    >
      <thead>
        <tr>
          <th
            id="program-budget-table-null1"
            style={
              Object {
                "width": 90,
              }
            }
          />
          <th
            className="center"
            colSpan="2"
            id="program-budget-table-hit"
          >
            HIT (90/10)
          </th>
          <th
            className="center"
            colSpan="2"
            id="program-budget-table-hie"
          >
            HIE (90/10)
          </th>
          <th
            className="center"
            colSpan="3"
            id="program-budget-table-combined"
          >
            HIT + HIE (90/10)
          </th>
        </tr>
        <tr>
          <th
            id="program-budget-table-null2"
          />
          <th
            className="right-align"
            id="program-budget-table-hit-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-hit-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-hie-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-hie-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-combined-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-combined-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-combined-total"
          >
            Medicaid total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1"
        >
          <td
            headers="program-budget-table-null1 program-budget-table-null2"
          >
            FFY 1
          </td>
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-fed"
            value={1}
          />
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-state"
            value={2}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-fed"
            value={10}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-state"
            value={20}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-fed"
            value={100}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-state"
            value={200}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-total"
            value={300}
          />
        </tr>
        <tr
          key="2"
        >
          <td
            headers="program-budget-table-null1 program-budget-table-null2"
          >
            FFY 2
          </td>
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-fed"
            value={3}
          />
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-state"
            value={4}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-fed"
            value={30}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-state"
            value={40}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-fed"
            value={400}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-state"
            value={500}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-total"
            value={700}
          />
        </tr>
        <tr
          key="total"
        >
          <td
            headers="program-budget-table-null1 program-budget-table-null2"
          >
            Total
          </td>
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-fed"
            value={5}
          />
          <DollarCell
            headers="program-budget-table-hit program-budget-table-hit-state"
            value={6}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-fed"
            value={50}
          />
          <DollarCell
            headers="program-budget-table-hie program-budget-table-hie-state"
            value={60}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-fed"
            value={700}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-state"
            value={800}
          />
          <DollarCell
            headers="program-budget-table-combined program-budget-table-combined-total"
            value={1500}
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="overflow-x"
  >
    <table
      className="table-cms"
    >
      <thead>
        <tr>
          <th
            id="program-budget-table-null3"
            style={
              Object {
                "width": 90,
              }
            }
          />
          <th
            className="center"
            colSpan="2"
            id="program-budget-table-mmis90"
          >
            MMIS (90/10)
          </th>
          <th
            className="center"
            colSpan="2"
            id="program-budget-table-mmis75"
          >
            MMIS (75/25)
          </th>
          <th
            className="center"
            colSpan="2"
            id="program-budget-table-mmis50"
          >
            MMIS (50/50)
          </th>
          <th
            className="center"
            colSpan="3"
            id="program-budget-table-mmisTotal"
          >
            MMIS (Total)
          </th>
        </tr>
        <tr>
          <th
            id="program-budget-table-null4"
          />
          <th
            className="right-align"
            id="program-budget-table-mmis90-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmis90-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmis75-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmis75-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmis50-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmis50-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmisTotal-fed"
          >
            Federal
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmisTotal-state"
          >
            State
          </th>
          <th
            className="right-align"
            id="program-budget-table-mmisTotal-total"
          >
            Medicaid total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1"
        >
          <td
            headers="program-budget-table-null3 program-budget-table-null4"
          >
            FFY 1
          </td>
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
            value={1}
          />
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
            value={2}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
            value={10}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
            value={20}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
            value={100}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
            value={200}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
            value={1000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
            value={2000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
            value={3000}
          />
        </tr>
        <tr
          key="2"
        >
          <td
            headers="program-budget-table-null3 program-budget-table-null4"
          >
            FFY 2
          </td>
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
            value={3}
          />
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
            value={4}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
            value={30}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
            value={40}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
            value={300}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
            value={400}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
            value={4000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
            value={5000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
            value={9000}
          />
        </tr>
        <tr
          key="total"
        >
          <td
            headers="program-budget-table-null3 program-budget-table-null4"
          >
            Total
          </td>
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
            value={5}
          />
          <DollarCell
            headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
            value={6}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
            value={50}
          />
          <DollarCell
            headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
            value={60}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
            value={500}
          />
          <DollarCell
            headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
            value={600}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
            value={7000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
            value={8000}
          />
          <DollarCell
            headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
            value={15000}
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`executive summary budget component renders correctly without data 1`] = `""`;
